Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Thủ quân Idzes: 'Chúng tôi đều là người Indonesia, sinh ở Hà Lan'",
+    "content": "Trung vệ Jay Idzes, người chơi bóng cho đội tuyển Indonesia, đã phát biểu rằng các cầu thủ nhập tịch của đội đều là người Indonesia dù sinh ra ở châu Âu. Sau trận thắng Bahrain 1-0, Idzes gây ấn tượng khi nói tiếng Indonesia với khán giả và nhấn mạnh tinh thần chiến đấu vì màu cờ sắc áo của đội tuyển. Anh cho biết, 17 cầu thủ trong đội hình đều có gốc gác Indonesia từ cha mẹ hoặc ông bà, và họ đang nỗ lực để đưa Indonesia trở thành một đội tuyển đáng gờm trong khu vực.",
+    "link": "https://vnexpress.net/thu-quan-idzes-chung-toi-deu-la-nguoi-indonesia-sinh-o-ha-lan-4866465.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Jay Idzes có phát biểu gì về việc các cầu thủ nhập tịch trong đội tuyển Indonesia?",
+    "answers": [
+      {
+        "text": "Họ đều là người Indonesia, sinh ra ở châu Âu.",
+        "correct": true
+      },
+      {
+        "text": "Họ không muốn chiến đấu cho Indonesia.",
+        "correct": false
+      },
+      {
+        "text": "Họ cảm thấy không được chào đón.",
+        "correct": false
+      },
+      {
+        "text": "Họ không có gốc gác Indonesia.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chồng chết, vợ có được ký hợp đồng cho thuê nhà không?",
     "content": "Bài viết đề cập đến quyền của người vợ trong việc ký hợp đồng cho thuê nhà khi chồng đã mất. Theo quy định của Luật Hôn nhân gia đình và Bộ luật Dân sự, tài sản chung của vợ chồng bao gồm nhà đất đứng tên cả hai. Khi chồng mất, phần tài sản của ông sẽ trở thành di sản thừa kế và cần có sự đồng ý của các đồng thừa kế khác để vợ có quyền ký hợp đồng cho thuê. Do đó, vợ không thể tự ý ký hợp đồng cho thuê mà không có sự đồng ý từ những người thừa kế khác.",
     "link": "https://tuoitre.vn/chong-chet-vo-co-duoc-ky-hop-dong-cho-thue-nha-khong-20250327091930328.htm",
@@ -2592,28 +2619,32 @@
     ]
   },
   {
-    "title": "FPT đẩy mạnh đầu tư giáo dục tại Huế",
-    "content": "FPT vừa tổ chức lễ cất nóc cho tổ hợp giáo dục tại Huế, đánh dấu một bước tiến quan trọng trong việc phát triển giáo dục tại khu vực miền Trung - Tây Nguyên. Dự án này sẽ phục vụ cho 20.000 học sinh, bao gồm các bậc học từ tiểu học đến giáo dục nghề nghiệp. FPT cam kết nâng cao chất lượng giáo dục và phát triển nguồn nhân lực số, đồng thời góp phần thúc đẩy sự phát triển kinh tế xã hội của địa phương.",
-    "link": "https://dantri.com.vn/giao-duc/fpt-day-manh-dau-tu-giao-duc-tai-hue-20250326171903168.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "FPT vừa đầu tư tổ hợp giáo dục nào tại Huế?",
+    "title": "Khi chạy bộ trở thành liệu pháp 'chữa lành'",
+    "content": "Chạy bộ đã trở thành một liệu pháp tinh thần hữu ích cho những ai cần tìm lại sự cân bằng trong cuộc sống. Nhiều người không còn xem chạy bộ là một cuộc đua mà là hành trình tự đối thoại và kết nối với bản thân và cộng đồng. Nghiên cứu chỉ ra rằng chạy bộ kích thích sản sinh các hormone tích cực, giúp cải thiện tâm trạng và cảm giác gắn kết. Tuy nhiên, các chuyên gia cũng lưu ý rằng chạy bộ không phải là phương thuốc cho mọi vấn đề tâm lý mà chỉ là một phần trong lối sống lành mạnh.",
+    "link": "https://vnexpress.net/khi-chay-bo-tro-thanh-lieu-phap-chua-lanh-4865058.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chạy bộ có tác dụng gì đối với sức khỏe tinh thần?",
     "answers": [
       {
-        "text": "Tổ hợp giáo dục FPT",
+        "text": "Giúp cải thiện tâm trạng và cảm giác gắn kết",
         "correct": true
       },
       {
-        "text": "Tổ hợp văn hóa",
+        "text": "Làm giảm tốc độ chạy",
         "correct": false
       },
       {
-        "text": "Trường đại học quốc tế",
+        "text": "Tăng cường sức mạnh cơ bắp",
         "correct": false
       },
       {
-        "text": "Trường tiểu học tư thục",
+        "text": "Giảm nguy cơ chấn thương",
+        "correct": false
+      },
+      {
+        "text": "Không có tác dụng gì đối với sức khỏe tâm thần",
         "correct": false
       }
     ]
@@ -2646,6 +2677,33 @@
     ]
   },
   {
+    "title": "FPT đẩy mạnh đầu tư giáo dục tại Huế",
+    "content": "FPT vừa tổ chức lễ cất nóc cho tổ hợp giáo dục tại Huế, đánh dấu một bước tiến quan trọng trong việc phát triển giáo dục tại khu vực miền Trung - Tây Nguyên. Dự án này sẽ phục vụ cho 20.000 học sinh, bao gồm các bậc học từ tiểu học đến giáo dục nghề nghiệp. FPT cam kết nâng cao chất lượng giáo dục và phát triển nguồn nhân lực số, đồng thời góp phần thúc đẩy sự phát triển kinh tế xã hội của địa phương.",
+    "link": "https://dantri.com.vn/giao-duc/fpt-day-manh-dau-tu-giao-duc-tai-hue-20250326171903168.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "FPT vừa đầu tư tổ hợp giáo dục nào tại Huế?",
+    "answers": [
+      {
+        "text": "Tổ hợp giáo dục FPT",
+        "correct": true
+      },
+      {
+        "text": "Tổ hợp văn hóa",
+        "correct": false
+      },
+      {
+        "text": "Trường đại học quốc tế",
+        "correct": false
+      },
+      {
+        "text": "Trường tiểu học tư thục",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vì sao ôtô điện được dùng dẫn tốc trong marathon",
     "content": "Ôtô điện đang được sử dụng để dẫn tốc trong các giải marathon nhờ khả năng duy trì vận tốc chính xác và không phát thải khí độc hại. Việc áp dụng xe điện không chỉ giúp các vận động viên tránh được tác động tiêu cực từ khói bụi mà còn hỗ trợ họ trong việc giữ nhịp chạy ổn định. Gần đây, nhiều giải marathon tại Việt Nam đã chuyển sang sử dụng ôtô điện như một phần trong xu hướng tổ chức các sự kiện thể thao thân thiện với môi trường và bền vững.",
     "link": "https://vnexpress.net/vi-sao-oto-dien-duoc-dung-dan-toc-trong-marathon-4865481.html",
@@ -2672,37 +2730,6 @@
       },
       {
         "text": "Vì ôtô điện được ưa chuộng trong các cuộc đua xe khác.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Khi chạy bộ trở thành liệu pháp 'chữa lành'",
-    "content": "Chạy bộ đã trở thành một liệu pháp tinh thần hữu ích cho những ai cần tìm lại sự cân bằng trong cuộc sống. Nhiều người không còn xem chạy bộ là một cuộc đua mà là hành trình tự đối thoại và kết nối với bản thân và cộng đồng. Nghiên cứu chỉ ra rằng chạy bộ kích thích sản sinh các hormone tích cực, giúp cải thiện tâm trạng và cảm giác gắn kết. Tuy nhiên, các chuyên gia cũng lưu ý rằng chạy bộ không phải là phương thuốc cho mọi vấn đề tâm lý mà chỉ là một phần trong lối sống lành mạnh.",
-    "link": "https://vnexpress.net/khi-chay-bo-tro-thanh-lieu-phap-chua-lanh-4865058.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chạy bộ có tác dụng gì đối với sức khỏe tinh thần?",
-    "answers": [
-      {
-        "text": "Giúp cải thiện tâm trạng và cảm giác gắn kết",
-        "correct": true
-      },
-      {
-        "text": "Làm giảm tốc độ chạy",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường sức mạnh cơ bắp",
-        "correct": false
-      },
-      {
-        "text": "Giảm nguy cơ chấn thương",
-        "correct": false
-      },
-      {
-        "text": "Không có tác dụng gì đối với sức khỏe tâm thần",
         "correct": false
       }
     ]
