--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Vì sao Brazil cần HLV nước ngoài chất lượng?",
+    "content": "Trận thua 1-4 của Brazil trước Argentina ở vòng loại World Cup 2026 đã đặt ra yêu cầu cấp bách về việc tìm kiếm một HLV nước ngoài chất lượng. Kết quả này không chỉ khiến người hâm mộ thất vọng mà còn cho thấy sự yếu kém trong chiến thuật của đội tuyển, khi mà các cầu thủ tài năng như Vinicius và Rodrygo không thể phát huy tối đa khả năng. Ngoài việc cần cải tổ chiến lược, Brazil cũng đã bỏ trống vị trí HLV chính thức trong một năm để chờ Carlo Ancelotti, nhưng không thành công. Hiện tại, Brazil cần một HLV giỏi để tận dụng tối đa tiềm năng của đội bóng và hướng tới World Cup 2026.",
+    "link": "https://vnexpress.net/vi-sao-brazil-can-hlv-nuoc-ngoai-chat-luong-4866178.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao Brazil cần một HLV nước ngoài chất lượng?",
+    "answers": [
+      {
+        "text": "Vì họ cần cải thiện chiến thuật và phát huy tối đa tiềm năng cầu thủ.",
+        "correct": true
+      },
+      {
+        "text": "Vì HLV trong nước đã hoàn thành tốt nhiệm vụ.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ đã thua nhiều trận gần đây.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không có đủ cầu thủ giỏi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Giá điện tăng từ 2-5% EVN có thể được tự quyết trong 3 tháng/lần",
     "content": "Bộ Công Thương đã đề xuất cơ chế điều chỉnh giá điện với thời gian 3 tháng/lần, cho phép Tập đoàn Điện lực Việt Nam (EVN) tự quyết định mức tăng từ 2-5% tùy thuộc vào biến động chi phí sản xuất. Nếu giá bán lẻ điện bình quân giảm từ 1% trở lên, EVN phải giảm giá tương ứng; ngược lại, với mức tăng từ 2-5% sẽ phải báo cáo Bộ Công Thương để được phê duyệt. Đề xuất này nhằm đảm bảo giá điện phản ánh đúng chi phí sản xuất, tạo điều kiện cho ngành điện hoạt động hiệu quả hơn.",
     "link": "https://tuoitre.vn/gia-dien-tang-tu-2-5-evn-co-the-duoc-tu-quyet-trong-3-thang-lan-20250327113732881.htm",
@@ -1194,33 +1221,6 @@
     ]
   },
   {
-    "title": "Những nữ rapper Gen Z đình đám: Pháo gợi cảm, tlinh vướng nhiều thị phi",
-    "content": "Bài viết giới thiệu ba nữ rapper Gen Z nổi bật của Việt Nam là Pháo, tlinh và Liu Grace, những người đã khẳng định vị trí của mình trong làng rap. Pháo, với nhiều bản hit gây sốt, gần đây gây chú ý với ca khúc \"Sự nghiệp chướng\" và những ồn ào liên quan đến đời tư. Tlinh nổi bật với phong cách biểu diễn và nhiều ca khúc thành công, nhưng cũng gặp phải tranh cãi về nội dung và hình ảnh. Liu Grace, một nữ rapper tiềm năng khác, đã có bước tiến lớn trong sự nghiệp sau khi tham gia Rap Việt.",
-    "link": "https://dantri.com.vn/giai-tri/nhung-nu-rapper-gen-z-dinh-dam-phao-goi-cam-tlinh-vuong-nhieu-thi-phi-20250326060402765.htm",
-    "cat": "giai-tri",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những nữ rapper Gen Z nổi bật nào được đề cập trong bài viết?",
-    "answers": [
-      {
-        "text": "Pháo, tlinh, Liu Grace",
-        "correct": true
-      },
-      {
-        "text": "Minh Lai, Tez, WXRDIE",
-        "correct": false
-      },
-      {
-        "text": "Suboi, JustaTee, Karik",
-        "correct": false
-      },
-      {
-        "text": "MCK, ViruSs, Big Daddy",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bé gái mắc hội chứng Cushing do thuốc corticoid chữa dị ứng",
     "content": "Bé Chi, 5 tuổi, đã mắc hội chứng Cushing do lạm dụng thuốc corticoid để chữa dị ứng. Sau khi dùng thuốc trong thời gian dài, bé xuất hiện các triệu chứng như sưng phù mặt, bụng, teo cơ tay chân và rạn da. Các bác sĩ cho biết việc sử dụng corticoid kéo dài có thể gây ra nhiều tác dụng phụ nghiêm trọng, bao gồm suy thượng thận. Hiện bé đã được điều trị bằng cách giảm liều lượng corticoid và sẽ ngưng hoàn toàn thuốc theo liệu trình.",
     "link": "https://vnexpress.net/be-gai-mac-hoi-chung-cushing-do-thuoc-corticoid-chua-di-ung-4866312.html",
@@ -1243,6 +1243,33 @@
       },
       {
         "text": "Do thiếu vitamin D",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những nữ rapper Gen Z đình đám: Pháo gợi cảm, tlinh vướng nhiều thị phi",
+    "content": "Bài viết giới thiệu ba nữ rapper Gen Z nổi bật của Việt Nam là Pháo, tlinh và Liu Grace, những người đã khẳng định vị trí của mình trong làng rap. Pháo, với nhiều bản hit gây sốt, gần đây gây chú ý với ca khúc \"Sự nghiệp chướng\" và những ồn ào liên quan đến đời tư. Tlinh nổi bật với phong cách biểu diễn và nhiều ca khúc thành công, nhưng cũng gặp phải tranh cãi về nội dung và hình ảnh. Liu Grace, một nữ rapper tiềm năng khác, đã có bước tiến lớn trong sự nghiệp sau khi tham gia Rap Việt.",
+    "link": "https://dantri.com.vn/giai-tri/nhung-nu-rapper-gen-z-dinh-dam-phao-goi-cam-tlinh-vuong-nhieu-thi-phi-20250326060402765.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những nữ rapper Gen Z nổi bật nào được đề cập trong bài viết?",
+    "answers": [
+      {
+        "text": "Pháo, tlinh, Liu Grace",
+        "correct": true
+      },
+      {
+        "text": "Minh Lai, Tez, WXRDIE",
+        "correct": false
+      },
+      {
+        "text": "Suboi, JustaTee, Karik",
+        "correct": false
+      },
+      {
+        "text": "MCK, ViruSs, Big Daddy",
         "correct": false
       }
     ]
@@ -1545,33 +1572,6 @@
     ]
   },
   {
-    "title": "Biến dạng cổ thiên nga ở ngón tay",
-    "content": "Biến dạng cổ thiên nga là tình trạng mà các ngón tay bị uốn cong đặc trưng, thường gặp ở những người mắc viêm khớp dạng thấp. Tình trạng này xảy ra do sự mất cân bằng giữa các gân gấp và duỗi, dẫn đến việc khớp ngón gần bị duỗi quá mức và khớp ngón xa bị gập lại. Triệu chứng bao gồm đau và cứng khớp, ảnh hưởng đến khả năng vận động của tay. Điều trị có thể bao gồm vật lý trị liệu hoặc phẫu thuật tùy thuộc vào mức độ nghiêm trọng của bệnh.",
-    "link": "https://vnexpress.net/bien-dang-co-thien-nga-o-ngon-tay-4866051.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Biến dạng cổ thiên nga là gì và ảnh hưởng đến ngón tay như thế nào?",
-    "answers": [
-      {
-        "text": "Biến dạng cổ thiên nga là tình trạng ngón tay uốn cong do viêm khớp dạng thấp.",
-        "correct": true
-      },
-      {
-        "text": "Biến dạng cổ thiên nga là khi ngón tay thẳng và mạnh mẽ.",
-        "correct": false
-      },
-      {
-        "text": "Biến dạng cổ thiên nga là triệu chứng của bệnh tiểu đường.",
-        "correct": false
-      },
-      {
-        "text": "Biến dạng cổ thiên nga là tình trạng ngón tay không hoạt động tốt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vì sao ngừng tim đột ngột?",
     "content": "Ngừng tim đột ngột là tình trạng khẩn cấp xảy ra khi tim ngừng hoạt động, thường do rối loạn nhịp tim, tổn thương mô tim hoặc yếu tố di truyền. Các triệu chứng có thể bao gồm đau ngực, khó thở và mất ý thức. Nếu không được cấp cứu kịp thời, tình trạng này có thể dẫn đến tử vong chỉ trong vài phút. Để giảm nguy cơ ngừng tim, việc duy trì lối sống lành mạnh như chế độ ăn uống khoa học và kiểm soát căng thẳng là rất quan trọng.",
     "link": "https://vnexpress.net/vi-sao-ngung-tim-dot-ngot-4866304.html",
@@ -1625,6 +1625,33 @@
       },
       {
         "text": "Không liên quan đến di truyền hay môi trường.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Biến dạng cổ thiên nga ở ngón tay",
+    "content": "Biến dạng cổ thiên nga là tình trạng mà các ngón tay bị uốn cong đặc trưng, thường gặp ở những người mắc viêm khớp dạng thấp. Tình trạng này xảy ra do sự mất cân bằng giữa các gân gấp và duỗi, dẫn đến việc khớp ngón gần bị duỗi quá mức và khớp ngón xa bị gập lại. Triệu chứng bao gồm đau và cứng khớp, ảnh hưởng đến khả năng vận động của tay. Điều trị có thể bao gồm vật lý trị liệu hoặc phẫu thuật tùy thuộc vào mức độ nghiêm trọng của bệnh.",
+    "link": "https://vnexpress.net/bien-dang-co-thien-nga-o-ngon-tay-4866051.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Biến dạng cổ thiên nga là gì và ảnh hưởng đến ngón tay như thế nào?",
+    "answers": [
+      {
+        "text": "Biến dạng cổ thiên nga là tình trạng ngón tay uốn cong do viêm khớp dạng thấp.",
+        "correct": true
+      },
+      {
+        "text": "Biến dạng cổ thiên nga là khi ngón tay thẳng và mạnh mẽ.",
+        "correct": false
+      },
+      {
+        "text": "Biến dạng cổ thiên nga là triệu chứng của bệnh tiểu đường.",
+        "correct": false
+      },
+      {
+        "text": "Biến dạng cổ thiên nga là tình trạng ngón tay không hoạt động tốt.",
         "correct": false
       }
     ]
@@ -2283,33 +2310,6 @@
     ]
   },
   {
-    "title": "Nghề pacer cá nhân thịnh thành tại Trung Quốc",
-    "content": "Nghề pacer cá nhân tại Trung Quốc đang phát triển mạnh mẽ do nhu cầu tham gia các giải marathon ngày càng gia tăng. Những người làm pacer cá nhân không chỉ hỗ trợ các vận động viên duy trì tốc độ mà còn cung cấp dinh dưỡng và quay video trong suốt cuộc đua. Mức thu nhập của họ có thể đạt tới 5.500 USD mỗi tháng, tùy thuộc vào số lượng khách hàng và yêu cầu dịch vụ. Xu hướng này phản ánh sự phát triển của các sự kiện marathon tại Trung Quốc và nhu cầu cá nhân hóa trong thể thao.",
-    "link": "https://vnexpress.net/nghe-pacer-ca-nhan-thinh-thanh-tai-trung-quoc-4866282.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao nghề pacer cá nhân lại phát triển tại Trung Quốc?",
-    "answers": [
-      {
-        "text": "Do số lượng giải marathon và nhu cầu cá nhân của vận động viên tăng cao.",
-        "correct": true
-      },
-      {
-        "text": "Bởi vì pacer chính thức không đủ để phục vụ nhu cầu.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ chỉ cần dẫn tốc cho khách hàng mà không cần hỗ trợ khác.",
-        "correct": false
-      },
-      {
-        "text": "Vì nghề này không yêu cầu nhiều kỹ năng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chọn tên tỉnh thành sau sáp nhập thế nào?",
     "content": "Bài viết thảo luận về các phương án đặt tên cho các tỉnh thành sau khi sáp nhập, với ba lựa chọn chính: giữ tên địa phương nổi bật, ghép tên hai vùng đất, hoặc đặt tên mới hoàn toàn. Nhiều chuyên gia cho rằng việc chọn tên một tỉnh để giảm bớt thủ tục hành chính và bảo tồn văn hóa là rất quan trọng. Thủ tướng Phạm Minh Chính và các nhà hoạch định chính sách nhấn mạnh rằng tên gọi cần phản ánh truyền thống lịch sử và văn hóa địa phương, đồng thời tạo sự đồng thuận trong cộng đồng.",
     "link": "https://vnexpress.net/chon-ten-tinh-thanh-sau-sap-nhap-the-nao-4863722.html",
@@ -2332,6 +2332,33 @@
       },
       {
         "text": "Ghép tên của hai vùng đất không liên quan",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nghề pacer cá nhân thịnh thành tại Trung Quốc",
+    "content": "Nghề pacer cá nhân tại Trung Quốc đang phát triển mạnh mẽ do nhu cầu tham gia các giải marathon ngày càng gia tăng. Những người làm pacer cá nhân không chỉ hỗ trợ các vận động viên duy trì tốc độ mà còn cung cấp dinh dưỡng và quay video trong suốt cuộc đua. Mức thu nhập của họ có thể đạt tới 5.500 USD mỗi tháng, tùy thuộc vào số lượng khách hàng và yêu cầu dịch vụ. Xu hướng này phản ánh sự phát triển của các sự kiện marathon tại Trung Quốc và nhu cầu cá nhân hóa trong thể thao.",
+    "link": "https://vnexpress.net/nghe-pacer-ca-nhan-thinh-thanh-tai-trung-quoc-4866282.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao nghề pacer cá nhân lại phát triển tại Trung Quốc?",
+    "answers": [
+      {
+        "text": "Do số lượng giải marathon và nhu cầu cá nhân của vận động viên tăng cao.",
+        "correct": true
+      },
+      {
+        "text": "Bởi vì pacer chính thức không đủ để phục vụ nhu cầu.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ chỉ cần dẫn tốc cho khách hàng mà không cần hỗ trợ khác.",
+        "correct": false
+      },
+      {
+        "text": "Vì nghề này không yêu cầu nhiều kỹ năng.",
         "correct": false
       }
     ]
@@ -3191,33 +3218,6 @@
     ]
   },
   {
-    "title": "Melo: 'Với một chân, Neymar vẫn là cầu thủ hay nhất Brazil'",
-    "content": "Felipe Melo, cựu tiền vệ Brazil, bày tỏ sự ủng hộ mạnh mẽ đối với Neymar sau thất bại 1-4 của Brazil trước Argentina trong vòng loại World Cup 2026. Melo khẳng định rằng Neymar, dù chỉ có một chân, vẫn là cầu thủ xuất sắc nhất Brazil và cần sớm trở lại đội tuyển. Ông chỉ trích sự thiếu quyết tâm và tinh thần chiến đấu của đội tuyển Brazil, nhấn mạnh rằng họ cần phải đoàn kết và chiến đấu vì nhau.",
-    "link": "https://vnexpress.net/melo-voi-mot-chan-neymar-van-la-cau-thu-hay-nhat-brazil-4866176.html",
-    "cat": "the-thao",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Melo nghĩ gì về khả năng của Neymar sau trận thua của Brazil trước Argentina?",
-    "answers": [
-      {
-        "text": "Neymar vẫn là cầu thủ hay nhất Brazil.",
-        "correct": true
-      },
-      {
-        "text": "Neymar không cần thiết cho đội tuyển.",
-        "correct": false
-      },
-      {
-        "text": "Melo không quan tâm đến Neymar.",
-        "correct": false
-      },
-      {
-        "text": "Brazil không cần thay đổi gì.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vụ cướp 2 triệu USD: Bắt thêm một người, hé lộ tình tiết mới",
     "content": "Cơ quan công an tỉnh Tây Ninh đã bắt giữ 6 người liên quan đến vụ cướp hơn 2 triệu USD, trong đó có một nhóm giả danh công an. Vụ cướp xảy ra vào ngày 10-3-2025, khi bà P.T.M.L. bị nhóm này tấn công và cướp đi số tiền lớn. Sau 13 ngày điều tra, các nghi phạm đã bị bắt và số tiền cướp được cũng đã được thu hồi một phần. Hiện công an đang tiếp tục mở rộng điều tra và truy nã những đối tượng còn lại.",
     "link": "https://tuoitre.vn/vu-cuop-2-trieu-usd-bat-them-mot-nguoi-he-lo-tinh-tiet-moi-20250326173405165.htm",
@@ -3732,33 +3732,6 @@
     ]
   },
   {
-    "title": "Áp lực học thêm của học sinh Hàn Quốc lan tới... Australia",
-    "content": "Bài viết đề cập đến việc áp lực học thêm từ Hàn Quốc đã lan rộng đến Australia, nơi mà dịch vụ gia sư tại nhà đang bùng nổ. Ngành công nghiệp dạy thêm tại Australia ước tính trị giá hơn 1 tỷ USD, với nhiều gia đình gốc Á, đặc biệt là người Hàn, đang chi tiêu cho việc học thêm của con cái. Mặc dù việc học thêm giúp nâng cao kết quả học tập, nhưng áp lực thành tích cũng gây ra những vấn đề tâm lý cho học sinh và giáo viên. Các chuyên gia cảnh báo về sự thiếu giám sát đối với các trung tâm dạy thêm và khuyến nghị cần có quy định rõ ràng hơn để bảo vệ trẻ em.",
-    "link": "https://dantri.com.vn/giao-duc/ap-luc-hoc-them-cua-hoc-sinh-han-quoc-lan-toi-australia-20250324215841973.htm",
-    "cat": "giao-duc",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Áp lực học thêm từ cộng đồng nào đã lan tới Australia?",
-    "answers": [
-      {
-        "text": "Cộng đồng người Hàn Quốc",
-        "correct": true
-      },
-      {
-        "text": "Cộng đồng người Mỹ",
-        "correct": false
-      },
-      {
-        "text": "Cộng đồng người Anh",
-        "correct": false
-      },
-      {
-        "text": "Cộng đồng người Pháp",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Điều gì xảy ra khi hormone estrogen, testosterone giảm?",
     "content": "Khi hormone estrogen và testosterone giảm, sức khỏe và sinh lý của phụ nữ có thể bị ảnh hưởng nghiêm trọng. Estrogen là hormone chính trong hệ sinh sản của nữ giới, và sự giảm sút của nó có thể dẫn đến tình trạng mãn kinh và suy buồng trứng. Ngoài ra, testosterone cũng đóng vai trò quan trọng trong việc duy trì sức khỏe xương và tâm trạng, và khi giảm, có thể gây ra triệu chứng như mệt mỏi và suy giảm khả năng sinh lý.",
     "link": "https://vnexpress.net/dieu-gi-xay-ra-khi-hormone-estrogen-testosterone-giam-4866052.html",
@@ -3808,6 +3781,33 @@
       },
       {
         "text": "Làm cho sẹo lồi trở nên gồ ghề hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Áp lực học thêm của học sinh Hàn Quốc lan tới... Australia",
+    "content": "Bài viết đề cập đến việc áp lực học thêm từ Hàn Quốc đã lan rộng đến Australia, nơi mà dịch vụ gia sư tại nhà đang bùng nổ. Ngành công nghiệp dạy thêm tại Australia ước tính trị giá hơn 1 tỷ USD, với nhiều gia đình gốc Á, đặc biệt là người Hàn, đang chi tiêu cho việc học thêm của con cái. Mặc dù việc học thêm giúp nâng cao kết quả học tập, nhưng áp lực thành tích cũng gây ra những vấn đề tâm lý cho học sinh và giáo viên. Các chuyên gia cảnh báo về sự thiếu giám sát đối với các trung tâm dạy thêm và khuyến nghị cần có quy định rõ ràng hơn để bảo vệ trẻ em.",
+    "link": "https://dantri.com.vn/giao-duc/ap-luc-hoc-them-cua-hoc-sinh-han-quoc-lan-toi-australia-20250324215841973.htm",
+    "cat": "giao-duc",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Áp lực học thêm từ cộng đồng nào đã lan tới Australia?",
+    "answers": [
+      {
+        "text": "Cộng đồng người Hàn Quốc",
+        "correct": true
+      },
+      {
+        "text": "Cộng đồng người Mỹ",
+        "correct": false
+      },
+      {
+        "text": "Cộng đồng người Anh",
+        "correct": false
+      },
+      {
+        "text": "Cộng đồng người Pháp",
         "correct": false
       }
     ]
