Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,68 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Gần 60% lao động Đồng bằng sông Cửu Long chỉ học hết tiểu học",
+    "content": "Báo cáo kinh tế thường niên Đồng bằng sông Cửu Long năm 2024 cho thấy gần 60% lao động tại khu vực này chỉ học đến tiểu học, khiến tỉ lệ lao động qua đào tạo thấp nhất cả nước. Mặc dù khu vực này đóng góp khoảng 12% GDP và xuất khẩu tăng trưởng mạnh, nhưng vẫn đối mặt với nhiều thách thức như hạ tầng yếu kém và thiếu lao động tay nghề cao. Các yếu tố như di dân cao và tình hình biến đổi khí hậu cũng ảnh hưởng đến cơ hội đầu tư và phát triển kinh tế tại đây.",
+    "link": "https://tuoitre.vn/gan-60-lao-dong-dong-bang-song-cuu-long-chi-hoc-het-tieu-hoc-20250327103908819.htm",
+    "cat": "giao-duc",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Tại Đồng bằng sông Cửu Long, tỉ lệ lao động chỉ học hết tiểu học là bao nhiêu?",
+    "answers": [
+      {
+        "text": "Gần 60%",
+        "correct": true
+      },
+      {
+        "text": "40%",
+        "correct": false
+      },
+      {
+        "text": "70%",
+        "correct": false
+      },
+      {
+        "text": "50%",
+        "correct": false
+      },
+      {
+        "text": "30%",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Không kỷ luật ông Phan Văn Hiếu, phó giám đốc Sở Khoa học và Công nghệ Quảng Ngãi",
+    "content": "Ngày 27-3, Ủy ban Kiểm tra Tỉnh ủy Quảng Ngãi thông báo không áp dụng hình thức kỷ luật đối với ông Phan Văn Hiếu, phó giám đốc Sở Khoa học và Công nghệ, mặc dù ông đã có vi phạm và khuyết điểm trong thực hiện nhiệm vụ. Quyết định này được đưa ra sau khi xem xét ý kiến của tổ chức Đảng nơi ông Hiếu sinh hoạt và những nguyên nhân khách quan dẫn đến vi phạm của ông. Ông Hiếu đã thể hiện sự nghiêm túc trong việc kiểm điểm và nhận trách nhiệm về những khuyết điểm của mình.",
+    "link": "https://tuoitre.vn/khong-ky-luat-ong-phan-van-hieu-pho-giam-doc-so-khoa-hoc-va-cong-nghe-quang-ngai-20250327135914381.htm",
+    "cat": "phap-luat",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Ủy ban Kiểm tra Tỉnh ủy Quảng Ngãi đã quyết định kỷ luật ông Phan Văn Hiếu như thế nào?",
+    "answers": [
+      {
+        "text": "Không áp dụng hình thức kỷ luật",
+        "correct": true
+      },
+      {
+        "text": "Áp dụng hình thức khiển trách",
+        "correct": false
+      },
+      {
+        "text": "Đình chỉ công tác",
+        "correct": false
+      },
+      {
+        "text": "Cảnh cáo",
+        "correct": false
+      },
+      {
+        "text": "Sa thải",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "6 mẹo để có ảnh đẹp khi đi race",
     "content": "Bài viết đưa ra 6 mẹo giúp các runner có những bức ảnh đẹp trong các cuộc đua marathon. Những mẹo này bao gồm đeo kính râm để che đi sự mệt mỏi, tập luyện tư thế về đích, tránh chạy gần những người phá kỷ lục, mỉm cười và tận hưởng khoảnh khắc, đi bộ thay vì chạy nhanh để có hình ảnh đẹp hơn, và nếu không muốn bị chụp những khoảnh khắc xấu, tốt nhất là không xuất hiện. Những mẹo này giúp các vận động viên tự tin hơn khi tham gia thi đấu.",
     "link": "https://vnexpress.net/6-meo-de-co-anh-dep-khi-di-race-4866285.html",
@@ -2323,32 +2385,32 @@
     ]
   },
   {
-    "title": "Xếp hàng từ nửa đêm xin visa sang Hàn Quốc làm việc thời vụ",
-    "content": "Nhu cầu xin visa sang Hàn Quốc làm việc thời vụ đang gia tăng, khiến nhiều lao động từ các tỉnh phải xếp hàng từ nửa đêm để lấy số thứ tự. Tại TP HCM, hàng chục người đã chờ đợi từ đêm trước để xin visa làm nông nghiệp, với mức thu nhập cao hơn nhiều so với công việc tại Việt Nam. Chính phủ đã ký kết với nhiều tỉnh Hàn Quốc để đưa lao động sang làm việc thời vụ từ năm 2018, và số lượng lao động tham gia ngày càng tăng.",
-    "link": "https://vnexpress.net/xep-hang-tu-nua-dem-xin-visa-sang-han-quoc-lam-viec-thoi-vu-4866263.html",
-    "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao nhiều lao động Việt Nam xếp hàng từ nửa đêm để xin visa sang Hàn Quốc?",
+    "title": "Phương pháp 'ăn như trẻ nhỏ' để giảm cân",
+    "content": "Phương pháp 'ăn như trẻ nhỏ' được chuyên gia dinh dưỡng Nicolette Pace khuyến nghị như một cách hiệu quả để giảm cân và duy trì sức khỏe. Bà đề xuất ba nguyên tắc chính: ăn theo chu kỳ 2-4 tiếng, ăn chậm và nhai kỹ, cùng với việc tránh ăn vặt vô thức. Những thói quen này không chỉ giúp kiểm soát cân nặng mà còn cải thiện tiêu hóa và cảm nhận hương vị của món ăn.",
+    "link": "https://vnexpress.net/phuong-phap-an-nhu-tre-nho-de-giam-can-4865503.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Phương pháp nào giúp giảm cân theo thói quen của trẻ nhỏ?",
     "answers": [
       {
-        "text": "Vì nhu cầu xin visa làm việc thời vụ tăng cao.",
+        "text": "Ăn theo chu kỳ 2-4 tiếng",
         "correct": true
       },
       {
-        "text": "Vì họ muốn đi du lịch.",
+        "text": "Ăn tối muộn",
         "correct": false
       },
       {
-        "text": "Vì họ cần làm thủ tục giấy tờ khác.",
+        "text": "Uống nhiều nước ngọt",
         "correct": false
       },
       {
-        "text": "Vì không có việc làm ở Việt Nam.",
+        "text": "Không ăn vặt",
         "correct": false
       },
       {
-        "text": "Vì muốn thăm người thân.",
+        "text": "Tiêu thụ nhiều đồ ăn nhanh",
         "correct": false
       }
     ]
@@ -2439,32 +2501,32 @@
     ]
   },
   {
-    "title": "Phương pháp 'ăn như trẻ nhỏ' để giảm cân",
-    "content": "Phương pháp 'ăn như trẻ nhỏ' được chuyên gia dinh dưỡng Nicolette Pace khuyến nghị như một cách hiệu quả để giảm cân và duy trì sức khỏe. Bà đề xuất ba nguyên tắc chính: ăn theo chu kỳ 2-4 tiếng, ăn chậm và nhai kỹ, cùng với việc tránh ăn vặt vô thức. Những thói quen này không chỉ giúp kiểm soát cân nặng mà còn cải thiện tiêu hóa và cảm nhận hương vị của món ăn.",
-    "link": "https://vnexpress.net/phuong-phap-an-nhu-tre-nho-de-giam-can-4865503.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Phương pháp nào giúp giảm cân theo thói quen của trẻ nhỏ?",
+    "title": "Xếp hàng từ nửa đêm xin visa sang Hàn Quốc làm việc thời vụ",
+    "content": "Nhu cầu xin visa sang Hàn Quốc làm việc thời vụ đang gia tăng, khiến nhiều lao động từ các tỉnh phải xếp hàng từ nửa đêm để lấy số thứ tự. Tại TP HCM, hàng chục người đã chờ đợi từ đêm trước để xin visa làm nông nghiệp, với mức thu nhập cao hơn nhiều so với công việc tại Việt Nam. Chính phủ đã ký kết với nhiều tỉnh Hàn Quốc để đưa lao động sang làm việc thời vụ từ năm 2018, và số lượng lao động tham gia ngày càng tăng.",
+    "link": "https://vnexpress.net/xep-hang-tu-nua-dem-xin-visa-sang-han-quoc-lam-viec-thoi-vu-4866263.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao nhiều lao động Việt Nam xếp hàng từ nửa đêm để xin visa sang Hàn Quốc?",
     "answers": [
       {
-        "text": "Ăn theo chu kỳ 2-4 tiếng",
+        "text": "Vì nhu cầu xin visa làm việc thời vụ tăng cao.",
         "correct": true
       },
       {
-        "text": "Ăn tối muộn",
+        "text": "Vì họ muốn đi du lịch.",
         "correct": false
       },
       {
-        "text": "Uống nhiều nước ngọt",
+        "text": "Vì họ cần làm thủ tục giấy tờ khác.",
         "correct": false
       },
       {
-        "text": "Không ăn vặt",
+        "text": "Vì không có việc làm ở Việt Nam.",
         "correct": false
       },
       {
-        "text": "Tiêu thụ nhiều đồ ăn nhanh",
+        "text": "Vì muốn thăm người thân.",
         "correct": false
       }
     ]
@@ -4093,33 +4155,6 @@
     ]
   },
   {
-    "title": "Điều gì xảy ra khi hormone estrogen, testosterone giảm?",
-    "content": "Khi hormone estrogen và testosterone giảm, sức khỏe và sinh lý của phụ nữ có thể bị ảnh hưởng nghiêm trọng. Estrogen là hormone chính trong hệ sinh sản của nữ giới, và sự giảm sút của nó có thể dẫn đến tình trạng mãn kinh và suy buồng trứng. Ngoài ra, testosterone cũng đóng vai trò quan trọng trong việc duy trì sức khỏe xương và tâm trạng, và khi giảm, có thể gây ra triệu chứng như mệt mỏi và suy giảm khả năng sinh lý.",
-    "link": "https://vnexpress.net/dieu-gi-xay-ra-khi-hormone-estrogen-testosterone-giam-4866052.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Hormone estrogen và testosterone giảm gây ra những hậu quả gì cho sức khỏe phụ nữ?",
-    "answers": [
-      {
-        "text": "Giảm ham muốn tình dục, mệt mỏi, và suy giảm sức khỏe sinh lý.",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường sức khỏe xương và tinh thần.",
-        "correct": false
-      },
-      {
-        "text": "Giảm nguy cơ mắc các bệnh phụ khoa.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường năng lượng và cải thiện tâm trạng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tiêm corticoid trị sẹo lồi",
     "content": "Tiêm corticoid, đặc biệt là triamcinolone, được sử dụng để điều trị sẹo lồi bằng cách giảm quá trình viêm và sản xuất collagen. Phương pháp này giúp cải thiện thẩm mỹ và giảm triệu chứng như ngứa rát ở những người có sẹo lồi. Để đạt hiệu quả tốt nhất, bệnh nhân cần được khám và tiêm đúng cách, và có thể cần đến vài buổi điều trị. Tuy nhiên, liệu pháp này không phù hợp cho một số trường hợp cụ thể như phụ nữ mang thai hay người có bệnh lý nền nghiêm trọng.",
     "link": "https://vnexpress.net/tiem-corticoid-tri-seo-loi-4866174.html",
@@ -4142,6 +4177,33 @@
       },
       {
         "text": "Làm cho sẹo lồi trở nên gồ ghề hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Điều gì xảy ra khi hormone estrogen, testosterone giảm?",
+    "content": "Khi hormone estrogen và testosterone giảm, sức khỏe và sinh lý của phụ nữ có thể bị ảnh hưởng nghiêm trọng. Estrogen là hormone chính trong hệ sinh sản của nữ giới, và sự giảm sút của nó có thể dẫn đến tình trạng mãn kinh và suy buồng trứng. Ngoài ra, testosterone cũng đóng vai trò quan trọng trong việc duy trì sức khỏe xương và tâm trạng, và khi giảm, có thể gây ra triệu chứng như mệt mỏi và suy giảm khả năng sinh lý.",
+    "link": "https://vnexpress.net/dieu-gi-xay-ra-khi-hormone-estrogen-testosterone-giam-4866052.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Hormone estrogen và testosterone giảm gây ra những hậu quả gì cho sức khỏe phụ nữ?",
+    "answers": [
+      {
+        "text": "Giảm ham muốn tình dục, mệt mỏi, và suy giảm sức khỏe sinh lý.",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường sức khỏe xương và tinh thần.",
+        "correct": false
+      },
+      {
+        "text": "Giảm nguy cơ mắc các bệnh phụ khoa.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường năng lượng và cải thiện tâm trạng.",
         "correct": false
       }
     ]
@@ -4768,37 +4830,6 @@
       },
       {
         "text": "Để tăng cường hợp tác quốc tế",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "PVFCCo - Phú Mỹ: Tuổi 22 trên một vị thế mới",
-    "content": "Tổng Công ty Phân bón và Hóa chất Dầu khí (PVFCCo) kỷ niệm 22 năm thành lập với nhiều đổi mới và dự án quan trọng. PVFCCo đã trở thành một trong những doanh nghiệp hàng đầu trong ngành phân bón tại Việt Nam và mở rộng ra thị trường quốc tế. Công ty đang tập trung vào chuyển đổi xanh và phát triển bền vững, với mục tiêu trở thành doanh nghiệp đạt chuẩn quốc tế trong lĩnh vực phân bón và hóa chất vào năm 2045.",
-    "link": "https://tuoitre.vn/pvfcco-phu-my-tuoi-22-tren-mot-vi-the-moi-20250326114219567.htm",
-    "cat": "kinh-doanh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "PVFCCo đã kỷ niệm bao nhiêu năm thành lập?",
-    "answers": [
-      {
-        "text": "22 năm",
-        "correct": true
-      },
-      {
-        "text": "20 năm",
-        "correct": false
-      },
-      {
-        "text": "25 năm",
-        "correct": false
-      },
-      {
-        "text": "30 năm",
-        "correct": false
-      },
-      {
-        "text": "15 năm",
         "correct": false
       }
     ]
