Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Giá xăng dầu tăng hai phiên liên tiếp, RON95 gần 20.500 đồng/lít",
+    "content": "Giá xăng dầu tại Việt Nam đã tăng trong hai phiên liên tiếp, với giá xăng RON 95 gần đạt 20.500 đồng/lít. Liên bộ Công Thương - Tài chính đã điều chỉnh giá xăng dầu từ 15h ngày 27-3, khiến giá xăng E5 RON 92 tăng 337 đồng/lít, lên 20.032 đồng/lít. Nguyên nhân tăng giá này được cho là do ảnh hưởng từ thị trường thế giới, bao gồm tình trạng giảm tồn kho dầu thô và những yếu tố khác như thuế mới từ Mỹ đối với hàng hóa Venezuela.",
+    "link": "https://tuoitre.vn/gia-xang-dau-tang-hai-phien-lien-tiep-ron95-gan-20-500-dong-lit-20250327145256115.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Giá xăng RON 95 hiện tại là bao nhiêu?",
+    "answers": [
+      {
+        "text": "20.424 đồng/lít",
+        "correct": true
+      },
+      {
+        "text": "19.500 đồng/lít",
+        "correct": false
+      },
+      {
+        "text": "21.000 đồng/lít",
+        "correct": false
+      },
+      {
+        "text": "20.000 đồng/lít",
+        "correct": false
+      },
+      {
+        "text": "18.500 đồng/lít",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "TP.HCM: Cơ sở vi phạm an toàn thực phẩm tăng, năm qua phạt gần 600 triệu đồng",
     "content": "Trong năm 2024, TP.HCM đã phát hiện và xử phạt 47 cơ sở vi phạm an toàn thực phẩm, với tổng số tiền phạt gần 600 triệu đồng. Tỉ lệ cơ sở vi phạm an toàn thực phẩm đã tăng từ 0,05% lên 0,3% so với năm trước, cho thấy một xu hướng đáng lo ngại trong kiểm soát an toàn thực phẩm. Bà Hồ Thị Quyên, phó giám đốc Trung tâm Xúc tiến thương mại và đầu tư TP.HCM, nhấn mạnh rằng việc đảm bảo an toàn thực phẩm là thách thức lớn đối với các doanh nghiệp và cần có các giải pháp quyết liệt hơn.",
     "link": "https://tuoitre.vn/tp-hcm-co-so-vi-pham-an-toan-thuc-pham-tang-nam-qua-phat-gan-600-trieu-dong-20250327105314434.htm",
@@ -1930,6 +1961,33 @@
     ]
   },
   {
+    "title": "Các dấu hiệu thính giác bị ảnh hưởng",
+    "content": "Bài viết đề cập đến các dấu hiệu cho thấy thính giác bị ảnh hưởng, bao gồm khó khăn trong việc nghe rõ lời nói, dễ giật mình trước âm thanh lớn và khó tập trung trong không gian ồn ào. Tuổi tác và các yếu tố môi trường như tiếng ồn lớn và hóa chất có thể gây tổn hại cho tế bào lông trong tai, dẫn đến mất thính lực. Các bác sĩ khuyến cáo rằng nếu gặp phải những dấu hiệu này, người đọc nên xem xét việc khám thính lực và sử dụng máy trợ thính nếu cần.",
+    "link": "https://vnexpress.net/cac-dau-hieu-thinh-giac-bi-anh-huong-4853180.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Các dấu hiệu nào cho thấy thính giác bị ảnh hưởng?",
+    "answers": [
+      {
+        "text": "Khó nghe rõ lời nói và dễ giật mình trước âm thanh lớn",
+        "correct": true
+      },
+      {
+        "text": "Chỉ nghe được âm thanh tần số thấp",
+        "correct": false
+      },
+      {
+        "text": "Không thấy được âm thanh trong môi trường yên tĩnh",
+        "correct": false
+      },
+      {
+        "text": "Luôn cảm thấy thính giác tốt hơn trước đây",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Những nữ rapper Gen Z đình đám: Pháo gợi cảm, tlinh vướng nhiều thị phi",
     "content": "Bài viết giới thiệu ba nữ rapper Gen Z nổi bật của Việt Nam là Pháo, tlinh và Liu Grace, những người đã khẳng định vị trí của mình trong làng rap. Pháo, với nhiều bản hit gây sốt, gần đây gây chú ý với ca khúc \"Sự nghiệp chướng\" và những ồn ào liên quan đến đời tư. Tlinh nổi bật với phong cách biểu diễn và nhiều ca khúc thành công, nhưng cũng gặp phải tranh cãi về nội dung và hình ảnh. Liu Grace, một nữ rapper tiềm năng khác, đã có bước tiến lớn trong sự nghiệp sau khi tham gia Rap Việt.",
     "link": "https://dantri.com.vn/giai-tri/nhung-nu-rapper-gen-z-dinh-dam-phao-goi-cam-tlinh-vuong-nhieu-thi-phi-20250326060402765.htm",
@@ -1979,33 +2037,6 @@
       },
       {
         "text": "Do thiếu vitamin D",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Các dấu hiệu thính giác bị ảnh hưởng",
-    "content": "Bài viết đề cập đến các dấu hiệu cho thấy thính giác bị ảnh hưởng, bao gồm khó khăn trong việc nghe rõ lời nói, dễ giật mình trước âm thanh lớn và khó tập trung trong không gian ồn ào. Tuổi tác và các yếu tố môi trường như tiếng ồn lớn và hóa chất có thể gây tổn hại cho tế bào lông trong tai, dẫn đến mất thính lực. Các bác sĩ khuyến cáo rằng nếu gặp phải những dấu hiệu này, người đọc nên xem xét việc khám thính lực và sử dụng máy trợ thính nếu cần.",
-    "link": "https://vnexpress.net/cac-dau-hieu-thinh-giac-bi-anh-huong-4853180.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Các dấu hiệu nào cho thấy thính giác bị ảnh hưởng?",
-    "answers": [
-      {
-        "text": "Khó nghe rõ lời nói và dễ giật mình trước âm thanh lớn",
-        "correct": true
-      },
-      {
-        "text": "Chỉ nghe được âm thanh tần số thấp",
-        "correct": false
-      },
-      {
-        "text": "Không thấy được âm thanh trong môi trường yên tĩnh",
-        "correct": false
-      },
-      {
-        "text": "Luôn cảm thấy thính giác tốt hơn trước đây",
         "correct": false
       }
     ]
@@ -2671,32 +2702,28 @@
     ]
   },
   {
-    "title": "Tin tức sáng 27-3: TP.HCM đổi nơi cấp phù hiệu xe kinh doanh vận tải; Kho bạc chào mua 1,2 tỉ USD",
-    "content": "Tin tức sáng 27-3 cho biết TP.HCM sẽ thay đổi địa điểm cấp phù hiệu cho xe kinh doanh vận tải, bắt đầu từ ngày 1-4 tới. Địa điểm mới sẽ là bộ phận một cửa của Sở Giao thông công chánh tại số 63 Lý Tự Trọng, quận 1. Ngoài ra, Kho bạc Nhà nước cũng thông báo chào mua 1,2 tỉ USD từ các ngân hàng thương mại trong 6 đợt chào mua gần đây, nhằm điều chỉnh tỉ giá USD/VND.",
-    "link": "https://tuoitre.vn/tin-tuc-sang-27-3-tp-hcm-doi-noi-cap-phu-hieu-xe-kinh-doanh-van-tai-kho-bac-chao-mua-1-2-ti-usd-20250326203936361.htm",
-    "cat": "kinh-doanh",
-    "positivity": 7,
-    "importance": 8,
-    "question": "TP.HCM sẽ đổi địa điểm cấp phù hiệu xe kinh doanh vận tải ở đâu?",
+    "title": "Yamaha YZF-R9 lần đầu ra mắt thị trường Đông Nam Á",
+    "content": "Yamaha YZF-R9, mẫu sportbike 900 phân khối, đã lần đầu tiên ra mắt tại triển lãm Bangkok Motor Show 2025 ở Thái Lan. Xe được trang bị động cơ 3 xi-lanh 890 phân khối, công suất 106 mã lực và nhiều công nghệ hiện đại như bộ điều khiển điện tử YRC và hệ thống hỗ trợ sang số nhanh. Mặc dù chưa có thông tin về giá bán, Yamaha đã giới thiệu R9 với nhiều tính năng nổi bật, hứa hẹn sẽ thu hút sự chú ý của người yêu thích xe máy trong khu vực Đông Nam Á.",
+    "link": "https://vnexpress.net/yamaha-yzf-r9-lan-dau-ra-mat-thi-truong-dong-nam-a-4865989.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Yamaha YZF-R9 được giới thiệu ở đâu và vào thời gian nào?",
     "answers": [
       {
-        "text": "Bộ phận một cửa của Sở Giao thông công chánh tại số 63 Lý Tự Trọng, quận 1",
+        "text": "Triển lãm Bangkok Motor Show 2025",
         "correct": true
       },
       {
-        "text": "Trụ sở của Kho bạc Nhà nước",
+        "text": "Triển lãm Tokyo Motor Show 2025",
         "correct": false
       },
       {
-        "text": "Sân bay Long Thành",
+        "text": "Triển lãm xe máy Milan 2025",
         "correct": false
       },
       {
-        "text": "Bộ Giao thông Vận tải",
-        "correct": false
-      },
-      {
-        "text": "UBND TP.HCM",
+        "text": "Triển lãm xe hơi Frankfurt 2025",
         "correct": false
       }
     ]
@@ -2733,55 +2760,32 @@
     ]
   },
   {
-    "title": "Tình yêu của cô gái Nhật và chàng nông dân Việt",
-    "content": "Câu chuyện tình yêu giữa Miwa, một cô gái Nhật Bản 30 tuổi và Quang Huy, chàng nông dân 29 tuổi ở Lâm Đồng, bắt đầu từ chuyến đi trải nghiệm nông trại. Miwa đã không chỉ thu hoạch cà phê mà còn học hỏi về văn hóa và cuộc sống của người nông dân Việt Nam. Tình cảm giữa họ phát triển qua những lần Miwa trở lại Việt Nam, giúp Huy trong công việc và cùng nhau thực hiện ước mơ khởi nghiệp với quán cà phê sạch. Họ đã vượt qua nhiều khó khăn và khoảng cách để xây dựng một mối quan hệ bền vững.",
-    "link": "https://vnexpress.net/tinh-yeu-cua-co-gai-nhat-va-chang-nong-dan-viet-4862674.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Tình yêu giữa Miwa và Quang Huy bắt đầu từ đâu?",
+    "title": "Tin tức sáng 27-3: TP.HCM đổi nơi cấp phù hiệu xe kinh doanh vận tải; Kho bạc chào mua 1,2 tỉ USD",
+    "content": "Tin tức sáng 27-3 cho biết TP.HCM sẽ thay đổi địa điểm cấp phù hiệu cho xe kinh doanh vận tải, bắt đầu từ ngày 1-4 tới. Địa điểm mới sẽ là bộ phận một cửa của Sở Giao thông công chánh tại số 63 Lý Tự Trọng, quận 1. Ngoài ra, Kho bạc Nhà nước cũng thông báo chào mua 1,2 tỉ USD từ các ngân hàng thương mại trong 6 đợt chào mua gần đây, nhằm điều chỉnh tỉ giá USD/VND.",
+    "link": "https://tuoitre.vn/tin-tuc-sang-27-3-tp-hcm-doi-noi-cap-phu-hieu-xe-kinh-doanh-van-tai-kho-bac-chao-mua-1-2-ti-usd-20250326203936361.htm",
+    "cat": "kinh-doanh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "TP.HCM sẽ đổi địa điểm cấp phù hiệu xe kinh doanh vận tải ở đâu?",
     "answers": [
       {
-        "text": "Chuyến đi trải nghiệm nông trại",
+        "text": "Bộ phận một cửa của Sở Giao thông công chánh tại số 63 Lý Tự Trọng, quận 1",
         "correct": true
       },
       {
-        "text": "Một cuộc thi cà phê",
+        "text": "Trụ sở của Kho bạc Nhà nước",
         "correct": false
       },
       {
-        "text": "Một chương trình văn hóa",
+        "text": "Sân bay Long Thành",
         "correct": false
       },
       {
-        "text": "Một cuộc gặp gỡ tình cờ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Yamaha YZF-R9 lần đầu ra mắt thị trường Đông Nam Á",
-    "content": "Yamaha YZF-R9, mẫu sportbike 900 phân khối, đã lần đầu tiên ra mắt tại triển lãm Bangkok Motor Show 2025 ở Thái Lan. Xe được trang bị động cơ 3 xi-lanh 890 phân khối, công suất 106 mã lực và nhiều công nghệ hiện đại như bộ điều khiển điện tử YRC và hệ thống hỗ trợ sang số nhanh. Mặc dù chưa có thông tin về giá bán, Yamaha đã giới thiệu R9 với nhiều tính năng nổi bật, hứa hẹn sẽ thu hút sự chú ý của người yêu thích xe máy trong khu vực Đông Nam Á.",
-    "link": "https://vnexpress.net/yamaha-yzf-r9-lan-dau-ra-mat-thi-truong-dong-nam-a-4865989.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Yamaha YZF-R9 được giới thiệu ở đâu và vào thời gian nào?",
-    "answers": [
-      {
-        "text": "Triển lãm Bangkok Motor Show 2025",
-        "correct": true
-      },
-      {
-        "text": "Triển lãm Tokyo Motor Show 2025",
+        "text": "Bộ Giao thông Vận tải",
         "correct": false
       },
       {
-        "text": "Triển lãm xe máy Milan 2025",
-        "correct": false
-      },
-      {
-        "text": "Triển lãm xe hơi Frankfurt 2025",
+        "text": "UBND TP.HCM",
         "correct": false
       }
     ]
@@ -2844,6 +2848,33 @@
       },
       {
         "text": "Vì muốn thăm người thân.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tình yêu của cô gái Nhật và chàng nông dân Việt",
+    "content": "Câu chuyện tình yêu giữa Miwa, một cô gái Nhật Bản 30 tuổi và Quang Huy, chàng nông dân 29 tuổi ở Lâm Đồng, bắt đầu từ chuyến đi trải nghiệm nông trại. Miwa đã không chỉ thu hoạch cà phê mà còn học hỏi về văn hóa và cuộc sống của người nông dân Việt Nam. Tình cảm giữa họ phát triển qua những lần Miwa trở lại Việt Nam, giúp Huy trong công việc và cùng nhau thực hiện ước mơ khởi nghiệp với quán cà phê sạch. Họ đã vượt qua nhiều khó khăn và khoảng cách để xây dựng một mối quan hệ bền vững.",
+    "link": "https://vnexpress.net/tinh-yeu-cua-co-gai-nhat-va-chang-nong-dan-viet-4862674.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Tình yêu giữa Miwa và Quang Huy bắt đầu từ đâu?",
+    "answers": [
+      {
+        "text": "Chuyến đi trải nghiệm nông trại",
+        "correct": true
+      },
+      {
+        "text": "Một cuộc thi cà phê",
+        "correct": false
+      },
+      {
+        "text": "Một chương trình văn hóa",
+        "correct": false
+      },
+      {
+        "text": "Một cuộc gặp gỡ tình cờ",
         "correct": false
       }
     ]
@@ -3019,33 +3050,6 @@
     ]
   },
   {
-    "title": "Nghề pacer cá nhân thịnh thành tại Trung Quốc",
-    "content": "Nghề pacer cá nhân tại Trung Quốc đang phát triển mạnh mẽ do nhu cầu tham gia các giải marathon ngày càng gia tăng. Những người làm pacer cá nhân không chỉ hỗ trợ các vận động viên duy trì tốc độ mà còn cung cấp dinh dưỡng và quay video trong suốt cuộc đua. Mức thu nhập của họ có thể đạt tới 5.500 USD mỗi tháng, tùy thuộc vào số lượng khách hàng và yêu cầu dịch vụ. Xu hướng này phản ánh sự phát triển của các sự kiện marathon tại Trung Quốc và nhu cầu cá nhân hóa trong thể thao.",
-    "link": "https://vnexpress.net/nghe-pacer-ca-nhan-thinh-thanh-tai-trung-quoc-4866282.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao nghề pacer cá nhân lại phát triển tại Trung Quốc?",
-    "answers": [
-      {
-        "text": "Do số lượng giải marathon và nhu cầu cá nhân của vận động viên tăng cao.",
-        "correct": true
-      },
-      {
-        "text": "Bởi vì pacer chính thức không đủ để phục vụ nhu cầu.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ chỉ cần dẫn tốc cho khách hàng mà không cần hỗ trợ khác.",
-        "correct": false
-      },
-      {
-        "text": "Vì nghề này không yêu cầu nhiều kỹ năng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chọn tên tỉnh thành sau sáp nhập thế nào?",
     "content": "Bài viết thảo luận về các phương án đặt tên cho các tỉnh thành sau khi sáp nhập, với ba lựa chọn chính: giữ tên địa phương nổi bật, ghép tên hai vùng đất, hoặc đặt tên mới hoàn toàn. Nhiều chuyên gia cho rằng việc chọn tên một tỉnh để giảm bớt thủ tục hành chính và bảo tồn văn hóa là rất quan trọng. Thủ tướng Phạm Minh Chính và các nhà hoạch định chính sách nhấn mạnh rằng tên gọi cần phản ánh truyền thống lịch sử và văn hóa địa phương, đồng thời tạo sự đồng thuận trong cộng đồng.",
     "link": "https://vnexpress.net/chon-ten-tinh-thanh-sau-sap-nhap-the-nao-4863722.html",
@@ -3068,6 +3072,33 @@
       },
       {
         "text": "Ghép tên của hai vùng đất không liên quan",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nghề pacer cá nhân thịnh thành tại Trung Quốc",
+    "content": "Nghề pacer cá nhân tại Trung Quốc đang phát triển mạnh mẽ do nhu cầu tham gia các giải marathon ngày càng gia tăng. Những người làm pacer cá nhân không chỉ hỗ trợ các vận động viên duy trì tốc độ mà còn cung cấp dinh dưỡng và quay video trong suốt cuộc đua. Mức thu nhập của họ có thể đạt tới 5.500 USD mỗi tháng, tùy thuộc vào số lượng khách hàng và yêu cầu dịch vụ. Xu hướng này phản ánh sự phát triển của các sự kiện marathon tại Trung Quốc và nhu cầu cá nhân hóa trong thể thao.",
+    "link": "https://vnexpress.net/nghe-pacer-ca-nhan-thinh-thanh-tai-trung-quoc-4866282.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao nghề pacer cá nhân lại phát triển tại Trung Quốc?",
+    "answers": [
+      {
+        "text": "Do số lượng giải marathon và nhu cầu cá nhân của vận động viên tăng cao.",
+        "correct": true
+      },
+      {
+        "text": "Bởi vì pacer chính thức không đủ để phục vụ nhu cầu.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ chỉ cần dẫn tốc cho khách hàng mà không cần hỗ trợ khác.",
+        "correct": false
+      },
+      {
+        "text": "Vì nghề này không yêu cầu nhiều kỹ năng.",
         "correct": false
       }
     ]
@@ -4441,6 +4472,33 @@
     ]
   },
   {
+    "title": "Áp lực học thêm của học sinh Hàn Quốc lan tới... Australia",
+    "content": "Bài viết đề cập đến việc áp lực học thêm từ Hàn Quốc đã lan rộng đến Australia, nơi mà dịch vụ gia sư tại nhà đang bùng nổ. Ngành công nghiệp dạy thêm tại Australia ước tính trị giá hơn 1 tỷ USD, với nhiều gia đình gốc Á, đặc biệt là người Hàn, đang chi tiêu cho việc học thêm của con cái. Mặc dù việc học thêm giúp nâng cao kết quả học tập, nhưng áp lực thành tích cũng gây ra những vấn đề tâm lý cho học sinh và giáo viên. Các chuyên gia cảnh báo về sự thiếu giám sát đối với các trung tâm dạy thêm và khuyến nghị cần có quy định rõ ràng hơn để bảo vệ trẻ em.",
+    "link": "https://dantri.com.vn/giao-duc/ap-luc-hoc-them-cua-hoc-sinh-han-quoc-lan-toi-australia-20250324215841973.htm",
+    "cat": "giao-duc",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Áp lực học thêm từ cộng đồng nào đã lan tới Australia?",
+    "answers": [
+      {
+        "text": "Cộng đồng người Hàn Quốc",
+        "correct": true
+      },
+      {
+        "text": "Cộng đồng người Mỹ",
+        "correct": false
+      },
+      {
+        "text": "Cộng đồng người Anh",
+        "correct": false
+      },
+      {
+        "text": "Cộng đồng người Pháp",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Điều gì xảy ra khi hormone estrogen, testosterone giảm?",
     "content": "Khi hormone estrogen và testosterone giảm, sức khỏe và sinh lý của phụ nữ có thể bị ảnh hưởng nghiêm trọng. Estrogen là hormone chính trong hệ sinh sản của nữ giới, và sự giảm sút của nó có thể dẫn đến tình trạng mãn kinh và suy buồng trứng. Ngoài ra, testosterone cũng đóng vai trò quan trọng trong việc duy trì sức khỏe xương và tâm trạng, và khi giảm, có thể gây ra triệu chứng như mệt mỏi và suy giảm khả năng sinh lý.",
     "link": "https://vnexpress.net/dieu-gi-xay-ra-khi-hormone-estrogen-testosterone-giam-4866052.html",
@@ -4490,33 +4548,6 @@
       },
       {
         "text": "Làm cho sẹo lồi trở nên gồ ghề hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Áp lực học thêm của học sinh Hàn Quốc lan tới... Australia",
-    "content": "Bài viết đề cập đến việc áp lực học thêm từ Hàn Quốc đã lan rộng đến Australia, nơi mà dịch vụ gia sư tại nhà đang bùng nổ. Ngành công nghiệp dạy thêm tại Australia ước tính trị giá hơn 1 tỷ USD, với nhiều gia đình gốc Á, đặc biệt là người Hàn, đang chi tiêu cho việc học thêm của con cái. Mặc dù việc học thêm giúp nâng cao kết quả học tập, nhưng áp lực thành tích cũng gây ra những vấn đề tâm lý cho học sinh và giáo viên. Các chuyên gia cảnh báo về sự thiếu giám sát đối với các trung tâm dạy thêm và khuyến nghị cần có quy định rõ ràng hơn để bảo vệ trẻ em.",
-    "link": "https://dantri.com.vn/giao-duc/ap-luc-hoc-them-cua-hoc-sinh-han-quoc-lan-toi-australia-20250324215841973.htm",
-    "cat": "giao-duc",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Áp lực học thêm từ cộng đồng nào đã lan tới Australia?",
-    "answers": [
-      {
-        "text": "Cộng đồng người Hàn Quốc",
-        "correct": true
-      },
-      {
-        "text": "Cộng đồng người Mỹ",
-        "correct": false
-      },
-      {
-        "text": "Cộng đồng người Anh",
-        "correct": false
-      },
-      {
-        "text": "Cộng đồng người Pháp",
         "correct": false
       }
     ]
