--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Bí quyết cho doanh nghiệp tiếp cận bạn hàng quốc tế",
+    "content": "Bài viết đề cập đến việc doanh nghiệp Việt Nam cần hợp tác để đưa sản phẩm lên các sàn thương mại điện tử, nhằm tăng cường kết nối và mở rộng thị trường quốc tế. Ông Nguyễn Văn Dũng nhấn mạnh tầm quan trọng của việc duy trì mối quan hệ sau các sự kiện triển lãm truyền thống. Hợp tác giữa các hiệp hội doanh nghiệp và sàn thương mại điện tử B2B Arobid được kỳ vọng sẽ tạo điều kiện thuận lợi cho 30.000 gian hàng số của doanh nghiệp Việt tham gia thị trường toàn cầu.",
+    "link": "https://tuoitre.vn/bi-quyet-cho-doanh-nghiep-tiep-can-ban-hang-quoc-te-20250327144445338.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Doanh nghiệp Việt Nam cần làm gì để tiếp cận thị trường quốc tế hiệu quả?",
+    "answers": [
+      {
+        "text": "Hợp tác đưa sản phẩm lên sàn thương mại điện tử",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường quảng cáo trên mạng xã hội",
+        "correct": false
+      },
+      {
+        "text": "Giảm giá sản phẩm để thu hút khách hàng",
+        "correct": false
+      },
+      {
+        "text": "Tham gia nhiều hội chợ triển lãm quốc tế",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đa dạng chương trình khuyến mãi tại hội chợ hàng Việt Nam xuất khẩu lớn nhất từ trước đến nay",
     "content": "Hội chợ hàng Việt Nam tiêu biểu xuất khẩu năm 2025 đã khai mạc tại TP.HCM với quy mô lớn nhất từ trước đến nay, quy tụ gần 750 doanh nghiệp trong nước và gần 200 nhà mua hàng quốc tế. Sự kiện diễn ra từ ngày 27 đến 29 tháng 3, tập trung vào các ngành hàng xuất khẩu chủ lực như nông sản, thực phẩm chế biến và thủy sản. Năm nay, chương trình khuyến mãi tại hội chợ rất đa dạng, với nhiều sản phẩm được giảm giá và các chương trình mua 3 tặng 1, thu hút đông đảo khách hàng tham quan và mua sắm.",
     "link": "https://tuoitre.vn/da-dang-chuong-trinh-khuyen-mai-tai-hoi-cho-hang-viet-nam-xuat-khau-lon-nhat-tu-truoc-den-nay-20250327152104396.htm",
@@ -1072,33 +1099,6 @@
     ]
   },
   {
-    "title": "4 món ăn làm chậm lão hóa, kéo dài tuổi thọ",
-    "content": "Bài viết giới thiệu 4 món ăn giúp làm chậm lão hóa và kéo dài tuổi thọ, bao gồm hạnh nhân, quả bơ, chocolate đen và cá béo. Những thực phẩm này chứa nhiều chất chống oxy hóa, vitamin và protein có lợi cho sức khỏe, giúp cải thiện làn da, duy trì cơ bắp và bảo vệ sức khỏe tổng thể. Việc bổ sung các món ăn này vào chế độ ăn hàng ngày có thể hỗ trợ quá trình chống lão hóa và kéo dài tuổi thọ.",
-    "link": "https://vnexpress.net/4-mon-an-lam-cham-lao-hoa-keo-dai-tuoi-tho-4866431.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những món ăn nào giúp làm chậm lão hóa và kéo dài tuổi thọ?",
-    "answers": [
-      {
-        "text": "Hạnh nhân, quả bơ, chocolate đen, cá béo",
-        "correct": true
-      },
-      {
-        "text": "Bánh ngọt, nước ngọt, món chiên",
-        "correct": false
-      },
-      {
-        "text": "Rau sống, nước ép trái cây, cơm trắng",
-        "correct": false
-      },
-      {
-        "text": "Thịt đỏ, đồ ăn nhanh, kem",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Khi nào điều trị ung thư phổi bằng liệu pháp nhắm trúng đích?",
     "content": "Liệu pháp nhắm trúng đích là phương pháp điều trị ung thư phổi cho những bệnh nhân có đột biến gene cụ thể. Phương pháp này có thể giúp tiêu diệt các tế bào ung thư mà không gây hại cho các tế bào lành tính, thường được áp dụng cho ung thư phổi không tế bào nhỏ. Tuy nhiên, không phải tất cả bệnh nhân đều phù hợp với liệu pháp này, chỉ những người có đặc điểm di truyền phù hợp mới có thể được điều trị bằng liệu pháp nhắm trúng đích.",
     "link": "https://vnexpress.net/khi-nao-dieu-tri-ung-thu-phoi-bang-lieu-phap-nham-trung-dich-4866540.html",
@@ -1121,6 +1121,33 @@
       },
       {
         "text": "Khi bệnh nhân không có triệu chứng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 món ăn làm chậm lão hóa, kéo dài tuổi thọ",
+    "content": "Bài viết giới thiệu 4 món ăn giúp làm chậm lão hóa và kéo dài tuổi thọ, bao gồm hạnh nhân, quả bơ, chocolate đen và cá béo. Những thực phẩm này chứa nhiều chất chống oxy hóa, vitamin và protein có lợi cho sức khỏe, giúp cải thiện làn da, duy trì cơ bắp và bảo vệ sức khỏe tổng thể. Việc bổ sung các món ăn này vào chế độ ăn hàng ngày có thể hỗ trợ quá trình chống lão hóa và kéo dài tuổi thọ.",
+    "link": "https://vnexpress.net/4-mon-an-lam-cham-lao-hoa-keo-dai-tuoi-tho-4866431.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những món ăn nào giúp làm chậm lão hóa và kéo dài tuổi thọ?",
+    "answers": [
+      {
+        "text": "Hạnh nhân, quả bơ, chocolate đen, cá béo",
+        "correct": true
+      },
+      {
+        "text": "Bánh ngọt, nước ngọt, món chiên",
+        "correct": false
+      },
+      {
+        "text": "Rau sống, nước ép trái cây, cơm trắng",
+        "correct": false
+      },
+      {
+        "text": "Thịt đỏ, đồ ăn nhanh, kem",
         "correct": false
       }
     ]
@@ -2444,33 +2471,6 @@
     ]
   },
   {
-    "title": "Những nữ rapper Gen Z đình đám: Pháo gợi cảm, tlinh vướng nhiều thị phi",
-    "content": "Bài viết giới thiệu ba nữ rapper Gen Z nổi bật của Việt Nam là Pháo, tlinh và Liu Grace, những người đã khẳng định vị trí của mình trong làng rap. Pháo, với nhiều bản hit gây sốt, gần đây gây chú ý với ca khúc \"Sự nghiệp chướng\" và những ồn ào liên quan đến đời tư. Tlinh nổi bật với phong cách biểu diễn và nhiều ca khúc thành công, nhưng cũng gặp phải tranh cãi về nội dung và hình ảnh. Liu Grace, một nữ rapper tiềm năng khác, đã có bước tiến lớn trong sự nghiệp sau khi tham gia Rap Việt.",
-    "link": "https://dantri.com.vn/giai-tri/nhung-nu-rapper-gen-z-dinh-dam-phao-goi-cam-tlinh-vuong-nhieu-thi-phi-20250326060402765.htm",
-    "cat": "giai-tri",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những nữ rapper Gen Z nổi bật nào được đề cập trong bài viết?",
-    "answers": [
-      {
-        "text": "Pháo, tlinh, Liu Grace",
-        "correct": true
-      },
-      {
-        "text": "Minh Lai, Tez, WXRDIE",
-        "correct": false
-      },
-      {
-        "text": "Suboi, JustaTee, Karik",
-        "correct": false
-      },
-      {
-        "text": "MCK, ViruSs, Big Daddy",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bé gái mắc hội chứng Cushing do thuốc corticoid chữa dị ứng",
     "content": "Bé Chi, 5 tuổi, đã mắc hội chứng Cushing do lạm dụng thuốc corticoid để chữa dị ứng. Sau khi dùng thuốc trong thời gian dài, bé xuất hiện các triệu chứng như sưng phù mặt, bụng, teo cơ tay chân và rạn da. Các bác sĩ cho biết việc sử dụng corticoid kéo dài có thể gây ra nhiều tác dụng phụ nghiêm trọng, bao gồm suy thượng thận. Hiện bé đã được điều trị bằng cách giảm liều lượng corticoid và sẽ ngưng hoàn toàn thuốc theo liệu trình.",
     "link": "https://vnexpress.net/be-gai-mac-hoi-chung-cushing-do-thuoc-corticoid-chua-di-ung-4866312.html",
@@ -2520,6 +2520,33 @@
       },
       {
         "text": "Luôn cảm thấy thính giác tốt hơn trước đây",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những nữ rapper Gen Z đình đám: Pháo gợi cảm, tlinh vướng nhiều thị phi",
+    "content": "Bài viết giới thiệu ba nữ rapper Gen Z nổi bật của Việt Nam là Pháo, tlinh và Liu Grace, những người đã khẳng định vị trí của mình trong làng rap. Pháo, với nhiều bản hit gây sốt, gần đây gây chú ý với ca khúc \"Sự nghiệp chướng\" và những ồn ào liên quan đến đời tư. Tlinh nổi bật với phong cách biểu diễn và nhiều ca khúc thành công, nhưng cũng gặp phải tranh cãi về nội dung và hình ảnh. Liu Grace, một nữ rapper tiềm năng khác, đã có bước tiến lớn trong sự nghiệp sau khi tham gia Rap Việt.",
+    "link": "https://dantri.com.vn/giai-tri/nhung-nu-rapper-gen-z-dinh-dam-phao-goi-cam-tlinh-vuong-nhieu-thi-phi-20250326060402765.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những nữ rapper Gen Z nổi bật nào được đề cập trong bài viết?",
+    "answers": [
+      {
+        "text": "Pháo, tlinh, Liu Grace",
+        "correct": true
+      },
+      {
+        "text": "Minh Lai, Tez, WXRDIE",
+        "correct": false
+      },
+      {
+        "text": "Suboi, JustaTee, Karik",
+        "correct": false
+      },
+      {
+        "text": "MCK, ViruSs, Big Daddy",
         "correct": false
       }
     ]
@@ -2795,33 +2822,6 @@
     ]
   },
   {
-    "title": "Mẹ thông minh sinh con thông minh?",
-    "content": "Theo các chuyên gia y khoa, trí thông minh của trẻ em không chỉ do di truyền từ mẹ mà còn bị ảnh hưởng bởi nhiều yếu tố khác như môi trường và giáo dục. Gene di truyền liên quan đến trí thông minh chủ yếu nằm trên nhiễm sắc thể X, nhưng còn có sự góp mặt của các nhiễm sắc thể khác. Di truyền chỉ đóng góp khoảng 50-60% vào trí thông minh, phần còn lại phụ thuộc vào chăm sóc và giáo dục từ gia đình và xã hội. Do đó, việc tạo điều kiện cho trẻ phát triển thông minh là rất quan trọng.",
-    "link": "https://vnexpress.net/me-thong-minh-sinh-con-thong-minh-4857985.html",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Trí thông minh của trẻ có phụ thuộc vào di truyền không?",
-    "answers": [
-      {
-        "text": "Có, nhưng còn phụ thuộc vào môi trường và giáo dục.",
-        "correct": true
-      },
-      {
-        "text": "Không, hoàn toàn do di truyền từ mẹ.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ do giáo dục từ gia đình.",
-        "correct": false
-      },
-      {
-        "text": "Không liên quan đến di truyền hay môi trường.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Biến dạng cổ thiên nga ở ngón tay",
     "content": "Biến dạng cổ thiên nga là tình trạng mà các ngón tay bị uốn cong đặc trưng, thường gặp ở những người mắc viêm khớp dạng thấp. Tình trạng này xảy ra do sự mất cân bằng giữa các gân gấp và duỗi, dẫn đến việc khớp ngón gần bị duỗi quá mức và khớp ngón xa bị gập lại. Triệu chứng bao gồm đau và cứng khớp, ảnh hưởng đến khả năng vận động của tay. Điều trị có thể bao gồm vật lý trị liệu hoặc phẫu thuật tùy thuộc vào mức độ nghiêm trọng của bệnh.",
     "link": "https://vnexpress.net/bien-dang-co-thien-nga-o-ngon-tay-4866051.html",
@@ -2875,6 +2875,33 @@
       },
       {
         "text": "Thiếu vitamin C",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mẹ thông minh sinh con thông minh?",
+    "content": "Theo các chuyên gia y khoa, trí thông minh của trẻ em không chỉ do di truyền từ mẹ mà còn bị ảnh hưởng bởi nhiều yếu tố khác như môi trường và giáo dục. Gene di truyền liên quan đến trí thông minh chủ yếu nằm trên nhiễm sắc thể X, nhưng còn có sự góp mặt của các nhiễm sắc thể khác. Di truyền chỉ đóng góp khoảng 50-60% vào trí thông minh, phần còn lại phụ thuộc vào chăm sóc và giáo dục từ gia đình và xã hội. Do đó, việc tạo điều kiện cho trẻ phát triển thông minh là rất quan trọng.",
+    "link": "https://vnexpress.net/me-thong-minh-sinh-con-thong-minh-4857985.html",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Trí thông minh của trẻ có phụ thuộc vào di truyền không?",
+    "answers": [
+      {
+        "text": "Có, nhưng còn phụ thuộc vào môi trường và giáo dục.",
+        "correct": true
+      },
+      {
+        "text": "Không, hoàn toàn do di truyền từ mẹ.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ do giáo dục từ gia đình.",
+        "correct": false
+      },
+      {
+        "text": "Không liên quan đến di truyền hay môi trường.",
         "correct": false
       }
     ]
@@ -4557,6 +4584,33 @@
     ]
   },
   {
+    "title": "Điều nên làm khi huyết áp không giảm",
+    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
+    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
+    "answers": [
+      {
+        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
+        "correct": true
+      },
+      {
+        "text": "Bỏ thuốc điều trị hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường uống rượu.",
+        "correct": false
+      },
+      {
+        "text": "Hạn chế uống nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người trẻ bị run tay có nguy hiểm không?",
     "content": "Người trẻ bị run tay thường do căng thẳng hoặc rối loạn hệ thần kinh thực vật. Tình trạng này có thể là phản ứng tự nhiên hoặc triệu chứng của các bệnh lý nghiêm trọng như bệnh Parkinson hoặc cường giáp. Nếu run tay chỉ xảy ra khi căng thẳng thì không quá nguy hiểm, nhưng nếu triệu chứng kéo dài hoặc ảnh hưởng đến sinh hoạt hàng ngày, cần đi khám bác sĩ để xác định nguyên nhân và điều trị kịp thời. Việc duy trì lối sống lành mạnh và cân bằng giữa công việc và nghỉ ngơi cũng rất quan trọng.",
     "link": "https://vnexpress.net/nguoi-tre-bi-run-tay-co-nguy-hiem-khong-4866229.html",
@@ -4583,33 +4637,6 @@
       },
       {
         "text": "Chỉ ảnh hưởng đến sức khỏe tâm lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Điều nên làm khi huyết áp không giảm",
-    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
-    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
-    "answers": [
-      {
-        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
-        "correct": true
-      },
-      {
-        "text": "Bỏ thuốc điều trị hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường uống rượu.",
-        "correct": false
-      },
-      {
-        "text": "Hạn chế uống nước.",
         "correct": false
       }
     ]
@@ -4923,33 +4950,6 @@
       },
       {
         "text": "Không có tác dụng gì",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hỗn chiến làm 1 người chết sau tin nhắn ‘chiều nay đến nhà Hiếu và bị đánh'",
-    "content": "Vào chiều 25-3, một vụ hỗn chiến đã xảy ra tại TP Bảo Lộc, Lâm Đồng, dẫn đến cái chết của ông Nguyễn Minh Huyền. Nguyên nhân bắt nguồn từ một mâu thuẫn giữa ông Hưng và ông Hiếu, sau khi ông Hưng bị đánh và thông báo trong nhóm zalo. Ngô Minh Nhật, con trai của ông Hiếu, đã mang dao đến nhà ông Hưng và đâm ông Huyền, dẫn đến cái chết của nạn nhân này. Công an đã tạm giữ 4 nghi phạm và đang tiếp tục điều tra vụ việc.",
-    "link": "https://tuoitre.vn/hon-chien-lam-1-nguoi-chet-sau-tin-nhan-chieu-nay-den-nha-hieu-va-bi-danh-20250326154604211.htm",
-    "cat": "phap-luat",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Vụ hỗn chiến tại Bảo Lộc đã khiến ai tử vong?",
-    "answers": [
-      {
-        "text": "Ông Nguyễn Minh Huyền",
-        "correct": true
-      },
-      {
-        "text": "Ông Nguyễn Ngọc Hưng",
-        "correct": false
-      },
-      {
-        "text": "Ngô Minh Nhật",
-        "correct": false
-      },
-      {
-        "text": "Nguyễn Anh Tân",
         "correct": false
       }
     ]
